# cfp-radar

./: .pre-commit-config.yaml  config.yaml  events.json  index.html  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/: events.json
src/: cli.py  config.py  generator.py  logging_config.py  notifier.py
src/collector/: agent.py  models.py
src/collector/sources/: confs_tech.py  papercall.py  web_search.py
src/web/templates/: index.html
tests/: conftest.py  test_collector.py  test_models.py
